--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_fields_of_group)
 export(get_fields_with_menus)
 export(get_info)
 export(get_null_value)
+export(get_terms_from_excel_and_yaml_sources)
 export(grep_field_val)
 export(replace_with_GRDI_term)
 export(separate_ontology_terms)
