--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,7 @@
 export(agrep_across_all_field_terms)
 export(amr_regexes)
 export(compare_lookup_tables)
-export(convert_GRDI_ont_to_vmr_ids)
-export(extract_ont_id)
-export(extract_ontology_name)
+export(excel_lookup_values)
 export(get_all_field_ontology_terms)
 export(get_fields_of_group)
 export(get_fields_with_menus)
@@ -13,13 +11,7 @@ export(get_info)
 export(get_null_value)
 export(get_terms_from_excel_and_yaml_sources)
 export(grep_field_val)
-export(insertBind)
-export(insert_collection_information)
-export(insert_geo_loc)
-export(populate_multi_choice_table)
+export(replace_all_with_grdi)
 export(replace_with_GRDI_term)
-export(select_and_rename_to_vmr)
-export(sendBindFetch)
 export(separate_ontology_terms)
 export(test_for_term_descrepancies)
-export(vmr_map_as_dataframe)
